Pracuje z SQL - zostalo usuwanie(chyba)

--- a/app/src/main/res/layout/activity_list_data_from_sql_database_by_selected_id.xml
+++ b/app/src/main/res/layout/activity_list_data_from_sql_database_by_selected_id.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ListDataFromSqlDatabaseBySelectedId">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/ETid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/id"
-            android:inputType="number" />
 
         <Button
             android:id="@+id/button5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="btnShowItemsWithIdFromTextView"
+            android:onClick="btnDelete"
             android:text="@string/show_data" />
 
         <ListView
@@ -31,4 +27,5 @@
         </ListView>
 
     </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
