--- a/app/src/main/res/layout/activity_list_data_from_sql_database_by_selected_id.xml
+++ b/app/src/main/res/layout/activity_list_data_from_sql_database_by_selected_id.xml
@@ -12,12 +12,27 @@
         android:orientation="vertical">
 
 
+        <EditText
+            android:id="@+id/editTextWithNewName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:hint="@string/new_exercise_name" />
+
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="btnChangeName"
+            android:text="@string/change_the_name" />
+
         <Button
             android:id="@+id/button5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="btnDelete"
-            android:text="@string/show_data" />
+            android:onClick="btnDeleteData"
+            android:text="@string/delete_data" />
 
         <ListView
             android:id="@+id/listViewSqlData"
