Dodano filtr Madgwicka, nie przetestowano

--- a/app/src/main/res/layout/activity_list_data_from_sql_database_by_selected_id.xml
+++ b/app/src/main/res/layout/activity_list_data_from_sql_database_by_selected_id.xml
@@ -34,12 +34,17 @@
             android:onClick="btnDeleteData"
             android:text="@string/delete_data" />
 
-        <ListView
+        <com.jjoe64.graphview.GraphView
+            android:layout_width="match_parent"
+            android:layout_height="200dip"
+            android:id="@+id/graph" />
+
+       <!-- <ListView
             android:id="@+id/listViewSqlData"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
-        </ListView>
+        </ListView> -->
 
     </LinearLayout>
 
