--- a/app/src/main/res/layout/activity_list_data_from_sql_database_by_selected_id.xml
+++ b/app/src/main/res/layout/activity_list_data_from_sql_database_by_selected_id.xml
@@ -71,6 +71,11 @@
             android:layout_height="200dip"
             android:id="@+id/graph5" />
 
+        <com.jjoe64.graphview.GraphView
+            android:layout_width="match_parent"
+            android:layout_height="200dip"
+            android:id="@+id/graph6" />
+
        <!-- <ListView
             android:id="@+id/listViewSqlData"
             android:layout_width="match_parent"
